# TICC

./: .gitignore  UnitTest.py  example.py  pyproject.toml
ticc/: TICC_helper.py  TICC_solver.py  TICC_solver_functional.py  admm_solver.py  jax_admm_solver.py
